kubernetes/apps/minio/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command: ["minio", "server", "/data", "--console-address", ":9001"]
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-data
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: apps
spec:
  ports:
  - name: api
    port: 9000
  - name: console
    port: 9001
  selector:
    app: minio
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-ingress
#   namespace: apps
#   annotations:
#     traefik.ingress.kubernetes.io/router.middlewares: apps-authelia@kubernetescrd
# spec:
#   rules:
#   - host: s3.woitzik.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: minio
#             port:
#               number: 9000
#   - host: minio.woitzik.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: minio
#             port:
#               number: 9001
